syntax = "proto3";

package com.pim.api;

import "com/pim/domain/users_domain.proto";
import "kalix/annotations.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

message CreateUserRequest {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string phone = 5;
}

service UsersService {
  option (kalix.codegen) = {
    event_sourced_entity: {
      name: "com.pim.domain.UsersEntity"
      entity_type: "users"
      state: "com.pim.domain.Users"
      events: [
        "com.pim.domain.UserCreated"
      ]
    }
  };

  rpc CreateUser (CreateUserRequest) returns (google.protobuf.Empty) {
    option (kalix.method).entity.key_generator = VERSION_4_UUID;
    option (google.api.http) = {
      post: "/users/create"
      body: "*"
    };
  }
}